Updated index.html and style.css pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logo">FoDubs</div>
         <div class="right">
             <ul class="links">
-                <li><a href="www.linkedin.com/in/finesowens">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/finesowens">LinkedIn</a></li>
                 <li><a href="https://open.spotify.com/user/fineso2?si=8eaaa74cb81d45e9">Spotify</a></li>
                 <li><a href="www.instagram.com">Instagram</a></li>
             </ul>
@@ -22,15 +22,16 @@
     <div class="first">
     <div class="about">
         <div class="intro">Welcome to my personal site</div>
-        <p> This is my first attempt at a website</p> 
-        <p>Everything you see, I coded using HTML and CSS</p>
-        <p>I'll be adding to this stuff as I learn more</p>
-        <p>In the meantime, enjoy !!!</p>
+        <div class="p">This is my first attempt at a website.</div>
+        <div class="p"> Everything you see, I coded using HTML and CSS. </div>
+        <div class="p"> I'll be adding to this stuff as I learn more - In the meantime, enjoy! </div>
         <div class="donate"><button> Donate </button></div>
     </div>
+    <div class="right">
     <div class="pics">
         <img class = "top" src="photos/img_0682.jpeg" alt="me">
         <img class = "top" src="photos/img_2959.jpeg" alt="me and rob">
+    </div>
     </div>
     </div>
 
