Mk II - Personal page
Updated the personal page with new index.html and
styles.css content. Should result in a smoother looking
template.

--- a/index.html
+++ b/index.html
@@ -8,78 +8,86 @@
 </head>
 <body>
 
-    <div class="topbar">
-        <div class="logo">FoDubs</div>
-        <div class="right">
-            <ul class="links">
-                <li><a href="https://www.linkedin.com/in/finesowens">LinkedIn</a></li>
-                <li><a href="https://open.spotify.com/user/fineso2?si=8eaaa74cb81d45e9">Spotify</a></li>
-                <li><a href="www.instagram.com">Instagram</a></li>
-            </ul>
+    <div class="header">
+    <div class="logo"> FoDubs </div>
+    <div class="links">
+    <Ul>
+    <li><a href="https://www.instagram.com/fodubs/">Instagram</a></li>
+    <li><a href="www.linkedin.com/in/finesowens">LinkedIn</a></li>
+    <li><a href="https://open.spotify.com/user/fineso2?si=be74bc8ae08946db">Spotify</a></li>
+    </Ul>
+    </div>
+    </div>
+
+    <div class="bio-section">
+        <div class="bio-section-left">
+            <div class="bio-section-left-header">
+                Welcome to my first webpage.
+            </div>
+            <div class="bio-section-left-minor">
+                This webpage is structured with basic HTML and CSS, especially FlexBox.
+                I've included some pictures from my travel experiences as well to demonstrate different CSS flexbox layouts.
+                I hope you enjoy. Thanks!
+            </div>
+            <div class="button"><button>Sign up</button></div>
         </div>
-    </div>
-
-    <div class="first">
-    <div class="about">
-        <div class="intro">Welcome to my personal site</div>
-        <div class="p">This is my first attempt at a website.</div>
-        <div class="p"> Everything you see, I coded using HTML and CSS. </div>
-        <div class="p"> I'll be adding to this stuff as I learn more - In the meantime, enjoy! </div>
-        <div class="donate"><button> Donate </button></div>
-    </div>
-    <div class="right">
-    <div class="pics">
-        <img class = "top" src="photos/img_0682.jpeg" alt="me">
-        <img class = "top" src="photos/img_2959.jpeg" alt="me and rob">
-    </div>
-    </div>
-    </div>
-
-    <div class="main">
-            <p> Enjoy some of my travel pics below &#128526;</p>
-     <div class="container">
-        <div class="info">
-            <img src="photos/img_0682.jpeg" alt="Thailand">
-            <div class="text"> This is Railay Beach in Thailand. Such a fun place, need to go back ! &#128018;</div>
-        </div>
-
-        <div class="info">
-            <img src="photos/img_2382.jpeg" alt="Barcelona">
-            <div class="text"> I &#129505; Barcelona. This city is magical. The architecture and culture was amazing. </div>
-        </div>
-
-        <div class="info">
-            <img src="photos/img_2731.jpeg" alt="Cannes">
-            <div class="text"> Cannes was peaceful and stylish and the baked goods were too good &#129366; !</div>
-        </div>
-
-        <div class="info">
-            <img src="photos/img_2790.jpeg" alt="Amsterdam">
-            <div class="text"> Amsterdam is one of the coolest cities... &#128293;&#128690; </div>
-        </div>
-    </div>
-  </div>  
-
-    <div class="quote">
-        <q>Impossible is just a big word thrown around by small men who find it easier to live in the world they've been given than to explore the power they have to change it. 
-            Impossible is not a fact. It's an opinion. Impossible is not a declaration. 
-            It's a dare. Impossible is potential. Impossible is temporary. Impossible is nothing.</q>
-        <footer>- Muhammad Ali</footer>
-    </div>
-
-    <div class="call">
-    <div class="action">
-        <p class="major"> Call to action! It's time!</p>
-        <p class="minor"> Sign up for our product by clicking that button right over there!</p>
-    </div>
-    <div class="button"><button>Sign Up</button></div>
-    </div>
-
-    <div class = "footer">
-       Copyright &#174;	Fines Owens
-    </div>
-
     
+        <div class="bio-section-right">
+          <img src="photos/img_0727.jpeg" alt="Fines Owens rockclimbing in Railay Beach, Thailand.">  
+        </div>
+    </div>
+
+    <div class="information">
+        <div class="information-header">
+            Take a peek at some of my travels below.
+            Resize the webpage a bit, look at how the images shrink and
+            grow, notice the rounded borders on the images, and how the text wraps as the webpage gets smaller. 
+            All these details were programmed by yours truly. Enjoy!
+        </div>
+        <div class="information-pictures">
+            <div class="information-pictures-icon">
+                <img src="photos/img_0682.jpeg" alt="Railay Beach boardwalk">
+                This is Railay Beach, an island off the coast of Krabi in Thailand.
+            </div>
+            <div class="information-pictures-icon">
+                <img src="photos/img_2382.jpeg" alt="Barcelona, Gothic Quarter">
+                Take a look at Barcelona's Gothic Quarter. If you're there, make sure to grab some tapas.
+            </div>
+            <div class="information-pictures-icon">
+                <img src="photos/img_2731.jpeg" alt="Cannes, South of France">
+                Here lies a corrider in the South of France. Cannes was stunning, a must-visit.
+            </div>
+            <div class="information-pictures-icon">
+                <img src="photos/img_2790.jpeg" alt="Amsterdam">
+                Amsterdam is a chill city. Hit a coffee shop and check out Vondel Park if you're in town.
+            </div>
+        </div>
+    </div>
+
+    <div class="quotes">
+        <div class="main-quote">
+            There is no better teacher than adversity. Every defeat, every heartbreak, every loss, contains its own seed, its own lesson on how to improve your performance the next time.
+        </div>
+        <div class="quotes-author">
+            - Malcolm X
+        </div>
+    </div>
     
+    <div class="call-to-action">
+        <div class="call-to-action-text">
+        <div class="call-to-action-title"> Call to action! It's time! </div>
+        <div class="call-to-action-description">This is filler text but aims to demonstrate different layouts in FlexBox.</div>
+        </div>
+
+        <div class="button"><button class="call-to-action">Sign up</button></div>
+    </div>
+
+    <div class="footer">
+      Copyright &#169;    Big FoTeen Development
+    </div>
+
+
+
+
 </body>
 </html>
